2002-04-05 21:30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 Configure:
  - Finally found out what was missing: VERSION was undefined
  - Added -ffor-scope to compiler command line
  - Changed -fascist to -ffascist
  - Cleaned up --with-postgres code, fixed typo
 test/Makefile.am:
  - Replaced John Anderson's test environment parameters with my own
 Test6:
  - Creates destination table if it didn't already exist
2002-04-02 01:45  Jeroen T. Vermeulen <jtv@xs4all.nl>
 TableWriter:
  - Wrapped back_insert_iterator specialization in namespace PGSTD { ... }
 Test1, Test2, Test4, Test7, Test10, Test14, Test15, Test16, Test17, Test19:
  - Made argc anonymous to silence "unused parameter" warnings
 TransactionItf:
  - Begin() now calls End() on failure (thanks Clinton James for bug report)
  - End() now ignores redundant invocations
  - Destructor checks that End() has been called
  - Added empty throw specification to End()
2002-04-01 01:45  Jeroen T. Vermeulen <jtv@xs4all.nl>
 Configure:
  - More help from John Anderson
 TableWriter:
  - Enclosed std::back_insert_iterator specialization in namespace PGSTD
2002-03-31 01:00  Jeroen T. Vermeulen <jtv@xs4all.nl>
 All:
  - Integrated John Anderson's autoconf/automake files and Ray Dassen's fixes
 Result:
  - Moved some inline functions to silence compiler warnings
2002-03-30  J.H.M. Dassen (Ray) <jdassen@debian.org>
 configure.in:
  - Renamed from configure.ac
  - Added bug report address to AC_INIT
  - Check for and enable several compiler warnings etc.
  - Detect whether <limits> is available
  - Detect whether <iterator> defines 
 Util:
  - Look for postgres_fe.h in a "server" subdirectory
 Compiler:
  - Use configure-determined HAVE_LIMITS
 doc/Makefile:
  - Created
 Docs:
  - Added DOCTYPE, made proper DocBook, use <ulink> for libpq reference.
2002-03-29 01:30  Jeroen T. Vermeulen <jtv@xs4all.nl>
  All:
   - DLL export directives for Windows, thanks Clinton James
  ChangeLog:
   - Created
   - Moved NEWS over to ChangeLog