@@ -1,2 +1,3 @@
+2002-04-07 02:30 Released with configure script
 2002-03-29 01:15 Not yet released.  Still integrating autogen stuff...
 
